--- a/frontend/html_files/vote.html
+++ b/frontend/html_files/vote.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>vote</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Vote page</h1>
 
     <script src="../js_files/admin.js"></script>
-</body>
+  </body>
 </html>
