--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,9 +8,47 @@
     <link rel="stylesheet" href="style.css" />
     <title>Home</title>
   </head>
-  <body>
-    <h1 class="text-6xl text-orange-600">Team J Voting Contract</h1>
+
+  <body class="bg-gray-700">
+    <div class="container mx-auto">
+      <header class="lg:mx-8 md:mx-2 mt-5">
+        <div class="flex flex-row justify-between items-center">
+          <div class="text-white text-2xl">
+            <span>
+              < Zuri</span>
+                <span class="text-red-600">.</span>
+                <span>Blockgames /></span>
+          </div>
+          <div class="flex justify-between items-center">
+            <ul class="flex justify-around text-white items-center mx-2 lg:mx-3">
+              <a href="#" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Admin</a>
+              <a href="#" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Vote</a>
+              <a href="#" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Result</a>
+            </ul>
+            <button
+              class="lg:mx-5 md:mx-3 py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">connect</button>
+          </div>
+        </div>
+      </header>
+
+      <main class="mx-5 my-5">
+        <div class="container flex flex-col mx-5 md:my-42 lg:my-72 text-white">
+          <h1 class="lg:text-6xl text-4xl text-bold">Now its all automated <br /> <span>Zuri</span> Voting Online</h1>
+          <p class="text-1xl my-5">
+            Welcome to our online voting platform. Setup and create your custom contract
+            and get your transactions going
+          </p>
+          <div>
+            <button class="py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">Connect
+            </button>
+          </div>
+        </div>
+
+    </div>
+    </main>
+    </div>
 
     <script src="./main.js"></script>
   </body>
+
 </html>
