--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
   <body class="bg-gray-700">
     <div class="container mx-auto">
       <header class="lg:mx-8 md:mx-2 mt-5">
-        <div class="flex flex-row sm:flex-col justify-between items-center">
+        <div class="flex lg:flex-row sm:flex-col justify-between items-center">
           <div class="text-white text-2xl">
             <span>
               < Zuri</span>
