--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,18 +12,15 @@
   <body class="bg-gray-700">
     <div class="container mx-auto">
       <header class="lg:mx-8 md:mx-2 mt-5">
-        <div class="flex lg:flex-row sm:flex-col justify-between items-center">
+        <div class="flex lg:flex-row sm:flex-col : justify-between items-center">
           <div class="text-white text-2xl">
-            <span>
-              < Zuri</span>
-                <span class="text-red-600">.</span>
-                <span>Blockgames /></span>
+            <a href="./"> < Zuri <span class="text-red-600">.</span> Blockgames /> </a>
           </div>
           <div class="flex justify-between items-center">
             <ul class="flex justify-around text-white items-center mx-2 lg:mx-3">
-              <a href="#" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Admin</a>
-              <a href="#" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Vote</a>
-              <a href="#" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Result</a>
+              <a href="./html_files/admin.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Admin</a>
+              <a href="./html_files/vote.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Vote</a>
+              <a href="./html_files/result.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Result</a>
             </ul>
             <button
               class="lg:mx-5 md:mx-3 py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">connect</button>
