--- a/frontend/html_files/vote.html
+++ b/frontend/html_files/vote.html
@@ -30,14 +30,11 @@
 
       <main class="mx-5 my-5">
         <div class="container flex flex-col mx-5 md:my-42 lg:my-72 text-white">
-          <h1 class="lg:text-6xl text-4xl text-bold">Now its all automated <br /> <span>Zuri</span> Voting Online</h1>
-          <p class="text-1xl my-5">
-            Welcome to our online voting platform. Setup and create your custom contract
-            and get your transactions going
-          </p>
-          <div>
-            <button class="py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">Connect
-            </button>
+          <h1 class="lg:text-6xl text-4xl text-bold">Vote Page</h1>
+            <div>
+              <button class="py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">Connect
+              </button>
+            </div>
           </div>
         </div>
 
