--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,12 +8,15 @@
     <link rel="stylesheet" href="../style.css" />
     <title>admin</title>
   </head>
+
   <body class="bg-gray-700">
     <div class="container mx-auto">
       <header class="lg:mx-8 md:mx-2 mt-5">
         <div class="flex lg:flex-row sm:flex-col : justify-between items-center">
           <div class="text-white text-2xl">
-            <a href=".././index.html"> < Zuri <span class="text-red-600">.</span> Blockgames /> </a>
+            <a href=".././index.html">
+              < Zuri <span class="text-red-600">.</span> Blockgames />
+            </a>
           </div>
           <div class="flex justify-between items-center">
             <ul class="flex justify-around text-white items-center mx-2 lg:mx-3">
@@ -28,14 +32,13 @@
 
       <main class="mx-5 my-5">
         <div class="container flex flex-col mx-5 md:my-42 lg:my-72 text-white">
-          <h1 class="lg:text-6xl text-4xl text-bold">Now its all automated <br /> <span>Zuri</span> Voting Online</h1>
-          <p class="text-1xl my-5">
-            Welcome to our online voting platform. Setup and create your custom contract
-            and get your transactions going
+          <h1 class="lg:text-6xl text-4xl text-bold">Admin page </h1>
           </p>
           <div>
             <button class="py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">Connect
             </button>
+          </div>
+          <div>
           </div>
         </div>
 
@@ -45,4 +48,5 @@
 
     <script src="../js_files/admin.js"></script>
   </body>
+
 </html>
