--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Home</title>
+    <link rel="stylesheet" href="./src/style.css" />
+    <title>Homepage</title>
   </head>
 
-  <body class="bg-gray-700">
-    <div class="container mx-auto">
+  <body style="background-image: url('./src/img/bg.jpg')" class="font-sans max-h-fit w-full py-8 max-h-100 h-full object-cover bg-no-repeat bg-cover bg-center">
+    <div class="container h-100 mx-auto">
       <header class="lg:mx-8 md:mx-2 mt-5">
         <div class="flex lg:flex-row sm:flex-col : justify-between items-center">
           <div class="text-white text-2xl">
-            <a href="./"> < Zuri <span class="text-red-600">.</span> Blockgames /> </a>
+            <a href="./">
+              < Zuri <span class="text-red-600">.</span> Blockgames />
+            </a>
           </div>
           <div class="flex justify-between items-center">
             <ul class="flex justify-around text-white items-center mx-2 lg:mx-3">
