--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -5,48 +5,135 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../src/style.css" />
     <title>admin</title>
+
+
   </head>
 
-  <body class="bg-gray-700">
-    <div class="container mx-auto">
-      <header class="lg:mx-8 md:mx-2 mt-5">
-        <div class="flex lg:flex-row sm:flex-col : justify-between items-center">
-          <div class="text-white text-2xl">
-            <a href=".././index.html">
+  <body class="bg-zinc-900 font-sans">
+    <div class="">
+      <header class="container mx-auto my-10">
+        <div class="flex  mx-5 justify-between items-center">
+          <div class="text-white block">
+            <a class="block text-2xl" href=".././index.html">
               < Zuri <span class="text-red-600">.</span> Blockgames />
             </a>
           </div>
           <div class="flex justify-between items-center">
-            <ul class="flex justify-around text-white items-center mx-2 lg:mx-3">
-              <a href="./admin.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Admin</a>
-              <a href="./vote.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Vote</a>
-              <a href="./result.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Result</a>
-            </ul>
+            <div class="flex justify-around text-white items-center mx-12">
+              <a href="./admin.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Admin</a>
+              <a href="./vote.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Vote</a>
+              <a href="./result.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Result</a>
+            </div>
             <button
               class="lg:mx-5 md:mx-3 py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">connect</button>
           </div>
         </div>
       </header>
 
-      <main class="mx-5 my-5">
-        <div class="container flex flex-col mx-5 md:my-42 lg:my-72 text-white">
-          <h1 class="lg:text-6xl text-4xl text-bold">Admin page </h1>
-          </p>
-          <div>
-            <button class="py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">Connect
-            </button>
+      <main class="">
+        <section class="container w-3/4 mx-auto text-white p-5">
+          <div class="flex justify-around">
+            <div class="mx-3">Candidate: 3</div>
+            <div class="mx-3">Board of directors: 3</div>
+            <div class="mx-3">Students</div>
+            <div class="mx-3">Teachers: 3</div>
+            <div class="flex justify-between">
+              <div class="mx5">Voting Inactive</div>
+              <div class="mx-3">Result Inactive</div>
+            </div>
           </div>
-          <div>
-          </div>
-        </div>
+        </section>
 
-    </div>
-    </main>
+        <section class="w-4/5 mx-auto">
+          <div class="grid grid-cols-2 my-32 gap-8 text-white">
+            <!-- form 1 -->
+            <div id="form1">
+              <h3>Create Candidate Profile</h3>
+              <p>Restricted to Chairman, Board of Directors and Teachers.</p>
+              <form action="#candidateForm" class="w-4/5">
+                <div class="my-5">
+                  <input type="text" class="rounded-full w-full px-4 py-2 block w-100 bg-zinc-800"
+                    placeholder="FirstName">
+                </div>
+                <div class="my-5">
+                  <input type="text" class="rounded-full w-full px-4 py-2 block w-100 bg-zinc-800"
+                    placeholder="Surname">
+                </div>
+                <div class="my-5">
+                  <div class="grid grid-cols-2 gap-4">
+                    <input type="text" class="rounded-full w-full px-4 py-2 block w-100 bg-zinc-800" placeholder="Age">
+                    <input type="text" class="rounded-full w-full px-4 py-2 block w-100 bg-zinc-800" placeholder="Post">
+                  </div>
+                </div>
+                <div class="my-5">
+                  <label for="addFile" class="rounded-full text-center hover:bg-zinc-700 px-8 py-2 bg-zinc-800">
+                    Add file
+                    <input type="file" class="opacity-0 h-0 w-0" id="addFile">
+                  </label>
+                </div>
+                <div class="my-14">
+                  <button for="addFile"
+                    class="block rounded-full w-full text-center hover:bg-red-500 border-red-400 px-8 py-2 bg-red-600">
+                    Add Candidate
+                  </button>
+                </div>
+              </form>
+            </div>
+            <!-- form 2 -->
+            <div id="form2">
+              <div class="w-4/5 ml-14">
+                <h3>Open/Close Voting Portal</h3>
+                <p>Restricted to Chairman</p>
+                <form action="#candidateForm">
+                  <div class="my-8">
+                    <input type="text" class="rounded-full w-full block w-100 px-4 py-2 bg-zinc-800"
+                      placeholder="Input your secret Code">
+                  </div>
+                  <div class="w-3/4 my-5">
+                    <div class="grid grid-cols-2 gap-4">
+                      <button type="button"
+                        class="rounded-full w-full px-4 py-2 block w-100 bg-green-600 hover:bg-green-500 border-green-400">Open
+                        Voting</button>
+                      <button type="button"
+                        class="rounded-full w-full px-4 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">Close
+                        Voting</button>
+                    </div>
+                  </div>
+                </form>
+
+                <div class=" mt-14">
+                  <h3>Open/Close Results Portal</h3>
+                  <p>Restricted to Chairman</p>
+                  <form action="#candidateForm">
+                    <div class="my-8">
+                      <input type="text" class="rounded-full w-full block w-100 px-4 py-2 bg-zinc-800"
+                        placeholder="Input your secret Code">
+                    </div>
+                    <div class="w-3/4 my-5">
+                      <div class="grid grid-cols-2 gap-4">
+                        <button type="button"
+                          class="rounded-full w-full px-4 py-2 block w-100 bg-green-600 hover:bg-green-500 border-green-400">Open
+                          Result</button>
+                        <button type="button"
+                          class="rounded-full w-full px-4 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">Close
+                          Result</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+
+        </section>
+
+      </main>
+
     </div>
 
     <script src="../js_files/admin.js"></script>
   </body>
+
 
 </html>
