--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
     <title>admin</title>
 
 
   </head>
 
-  <body class="bg-zinc-900 font-sans">
+  <body class="bg-zinc-900 font-heading">
     <div class="">
       <header class="container mx-auto my-10">
         <div class="flex  mx-5 justify-between items-center">
@@ -34,14 +39,20 @@
 
       <main class="">
         <section class="container w-3/4 mx-auto text-white p-5">
-          <div class="flex justify-around">
-            <div class="mx-3">Candidate: 3</div>
-            <div class="mx-3">Board of directors: 3</div>
-            <div class="mx-3">Students</div>
-            <div class="mx-3">Teachers: 3</div>
+          <div class="flex justify-between items-center align-middle">
+            <div class="mx-3 mt-6">Candidate: 3</div>
+            <div class="mx-3 mt-6">Board of directors: 3</div>
+            <div class="mx-3 mt-6">Students</div>
+            <div class="mx-3 mt-6">Teachers: 3</div>
             <div class="flex justify-between">
-              <div class="mx5">Voting Inactive</div>
-              <div class="mx-3">Result Inactive</div>
+              <div class="mx-3 flex flex-col justify-center items-center">
+                <div class="p-1 h-6 w-12 shadow-md bg-red-600 border-red-400"></div>
+                <div>Voting Inactive</div>
+              </div>
+              <div class="mx-3 flex flex-col justify-center items-center">
+                <div class="p-1 h-6 w-12 shadow-md bg-red-600 border-red-400"></div>
+                <div>Result Inactive</div>
+              </div>
             </div>
           </div>
         </section>
@@ -50,8 +61,8 @@
           <div class="grid grid-cols-2 my-32 gap-8 text-white">
             <!-- form 1 -->
             <div id="form1">
-              <h3>Create Candidate Profile</h3>
-              <p>Restricted to Chairman, Board of Directors and Teachers.</p>
+              <h3 class="text-2xl font-sans">Create Candidate Profile</h3>
+              <p class="text-sm font-thin">Restricted to Chairman, Board of Directors and Teachers.</p>
               <form action="#candidateForm" class="w-4/5">
                 <div class="my-5">
                   <input type="text" class="rounded-full w-full px-4 py-2 block w-100 bg-zinc-800"
@@ -84,8 +95,8 @@
             <!-- form 2 -->
             <div id="form2">
               <div class="w-4/5 ml-14">
-                <h3>Open/Close Voting Portal</h3>
-                <p>Restricted to Chairman</p>
+                <h3 class="text-2xl font-sans">Open/Close Voting Portal</h3>
+                <p class="text-sm font-thin">Restricted to Chairman</p>
                 <form action="#candidateForm">
                   <div class="my-8">
                     <input type="text" class="rounded-full w-full block w-100 px-4 py-2 bg-zinc-800"
@@ -104,8 +115,8 @@
                 </form>
 
                 <div class=" mt-14">
-                  <h3>Open/Close Results Portal</h3>
-                  <p>Restricted to Chairman</p>
+                  <h3 class="text-2xl font-sans">Open/Close Results Portal</h3>
+                  <p class="text-sm font-thin">Restricted to Chairman</p>
                   <form action="#candidateForm">
                     <div class="my-8">
                       <input type="text" class="rounded-full w-full block w-100 px-4 py-2 bg-zinc-800"
