--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
     <title>Homepage</title>
   </head>
 
-  <body style="background-image: url('./src/img/bg.jpg')" class="font-sans max-h-fit w-full py-8 max-h-100 h-full object-cover bg-no-repeat bg-cover bg-center">
+  <body style="background-image: url('./src/img/bg.jpg')"
+    class="font-heading max-h-fit w-full py-8 max-h-100 h-full object-cover bg-no-repeat bg-cover bg-center">
     <div class="container h-100 mx-auto">
       <header class="lg:mx-8 md:mx-2 mt-5">
         <div class="flex lg:flex-row sm:flex-col : justify-between items-center">
@@ -31,9 +37,11 @@
       </header>
 
       <main class="mx-5 my-5">
-        <div class="container flex flex-col mx-5 md:my-42 lg:my-72 text-white">
-          <h1 class="lg:text-6xl text-4xl text-bold">Now its all automated <br /> <span>Zuri</span> Voting Online</h1>
-          <p class="text-1xl my-5">
+        <div class="container md:w-3/4 px-3 flex flex-col mx-5 md:my-42 lg:my-72 text-white">
+          <h1 class="lg:text-6xl font-heading sm:text-2xl text-bold">Now its all automated <br /> <span
+              class="text-red-600">Zuri</span>
+            Voting Online</h1>
+          <p class="leading-relaxed my-5">
             Welcome to our online voting platform. Setup and create your custom contract
             and get your transactions going
           </p>
