--- a/frontend/html_files/result.html
+++ b/frontend/html_files/result.html
@@ -5,51 +5,101 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css" />
-    <title>result</title>
+    <link rel="stylesheet" href="../src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
+    <title>results</title>
+
+
   </head>
 
-  <body class="bg-gray-900">
-    <div class="container mx-auto">
-      <header class="lg:mx-8 md:mx-2 mt-5">
-        <div class="flex lg:flex-row sm:flex-col : justify-between items-center">
-          <div class="text-white text-2xl">
-            <a href=".././index.html">
+  <body class="bg-zinc-900 font-heading">
+    <div class="">
+      <header class="container mx-auto my-10">
+        <div class="flex  mx-5 justify-between items-center">
+          <div class="text-white block">
+            <a class="block text-2xl" href=".././index.html">
               < Zuri <span class="text-red-600">.</span> Blockgames />
             </a>
           </div>
           <div class="flex justify-between items-center">
-            <ul class="flex justify-around text-white items-center mx-2 lg:mx-3">
-              <a href="./admin.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Admin</a>
-              <a href="./vote.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Vote</a>
-              <a href="./result.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Result</a>
-            </ul>
+            <div class="flex justify-around text-white items-center mx-12">
+              <a href="./admin.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Admin</a>
+              <a href="./vote.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Vote</a>
+              <a href="./result.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Result</a>
+            </div>
             <button
               class="lg:mx-5 md:mx-3 py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">connect</button>
           </div>
         </div>
       </header>
 
-      <main class="mx-5 my-5">
-        <div class="container flex flex-col mx-5 md:my-42 lg:my-72 text-white">
-          <h1 class="lg:text-6xl text-4xl text-bold">Result Page</h1>
-          <p class="text-1xl my-5">
-            Welcome to our online voting platform. Setup and create your custom contract
-            and get your transactions going
-          </p>
-          <div>
-            <button class="py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">Connect
-            </button>
+      <main class="">
+        <section class="container w-3/4 mx-auto text-white p-5">
+          <div class="flex justify-between items-center align-middle">
+            <div class="mx-3 mt-6">Candidate: 3</div>
+            <div class="mx-3 mt-6">Board of directors: 3</div>
+            <div class="mx-3 mt-6">Students</div>
+            <div class="mx-3 mt-6">Teachers: 3</div>
+            <div class="flex justify-between">
+              <div class="mx-3 flex flex-col justify-center items-center">
+                <div class="p-1 h-6 w-12 shadow-md bg-red-600 border-red-400"></div>
+                <div>Voting Inactive</div>
+              </div>
+              <div class="mx-3 flex flex-col justify-center items-center">
+                <div class="p-1 h-6 w-12 shadow-md bg-red-600 border-red-400"></div>
+                <div>Result Inactive</div>
+              </div>
+            </div>
           </div>
-          <div>
-          </div>
-        </div>
+        </section>
+
+        <section class="w-4/5 mx-auto">
+          <div class="grid grid-cols-2 my-32 gap-8 text-white">
+            <!-- form 1 -->
+            <div id="form1">
+              
+              </form>
+            </div>
+            <!-- form 2 -->
+            <div id="form2">
+              
+                </form>
+
+                <div class=" mt-14">
+                  <h3 class="text-2xl font-sans">Open/Close Results Portal</h3>
+                  <p class="text-sm font-thin">Restricted to Chairman</p>
+                  <form action="#candidateForm">
+                    <div class="my-8">
+                      <input type="text" class="rounded-full w-full block w-100 px-4 py-2 bg-zinc-800"
+                        placeholder="Input your secret Code">
+                    </div>
+                    <div class="w-3/4 my-5">
+                      <div class="grid grid-cols-2 gap-4">
+                        <button type="button"
+                          class="rounded-full w-full px-4 py-2 block w-100 bg-green-600 hover:bg-green-500 border-green-400">Open
+                          Result</button>
+                        <button type="button"
+                          class="rounded-full w-full px-4 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">Close
+                          Result</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+
+        </section>
+
+      </main>
 
     </div>
-    </main>
-    </div>
 
-    <script src="../js_files/admin.js"></script>
+    <script src="../js_files/result.js"></script>
   </body>
+
 
 </html>
