--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -20,7 +20,7 @@
     <div class="">
       <header class="container mx-auto my-10">
         <div class="flex  mx-5 justify-between items-center">
-          <div class="text-white block">
+          <div class="text-white">
             <a class="block text-2xl" href=".././index.html">
               < Zuri <span class="text-red-600">.</span> Blockgames />
             </a>
@@ -30,9 +30,13 @@
               <a href="./admin.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Admin</a>
               <a href="./vote.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Vote</a>
               <a href="./result.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Result</a>
+              <a
+              href="#"
+              style="font-size: 12px;"
+                class="font-sans text-sm font md:mx-3 py-2 px-5 bg-zinc-800 hover:bg-zinc-700 text-white rounded-full cursor-pointer">
+                0x8626f6940E34b78830eFb4CeF49B2d1F2C9C9988
+              </a>
             </div>
-            <button
-              class="lg:mx-5 md:mx-3 py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">connect</button>
           </div>
         </div>
       </header>
@@ -91,7 +95,7 @@
                   </button>
                 </div>
               </form>
-              
+
             </div>
 
 
@@ -126,7 +130,7 @@
                         placeholder="Input your secret Code">
                     </div>
                     <div class="w-3/4 my-5">
-                      <div class="grid grid-cols-2 gap-4">
+                      <div class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-2 sm:grid-cols-1 gap-4">
                         <button type="button"
                           class="rounded-full w-full px-4 py-2 block w-100 bg-green-600 hover:bg-green-500 border-green-400">Open
                           Result</button>
