--- a/frontend/html_files/result.html
+++ b/frontend/html_files/result.html
@@ -30,9 +30,14 @@
               <a href="./admin.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Admin</a>
               <a href="./vote.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Vote</a>
               <a href="./result.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Result</a>
+              <a
+              href="#"
+              style="font-size: 12px;"
+                class="font-sans text-sm font md:mx-3 py-2 px-5 bg-zinc-800 hover:bg-zinc-700 text-white rounded-full cursor-pointer">
+                0x8626f6940E34b78830eFb4CeF49B2d1F2C9C9988
+              </a>
             </div>
-            <button
-              class="lg:mx-5 md:mx-3 py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">connect</button>
+            
           </div>
         </div>
       </header>
