--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,9 @@
     <title>Homepage</title>
   </head>
 
-  <body style="background-image: url('https://images.unsplash.com/photo-1472803828399-39d4ac53c6e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1553&q=80')"
+  <!-- url('https://images.unsplash.com/photo-1472803828399-39d4ac53c6e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1553&q=80') -->
+
+  <body style="background-image: url('./src/img/bg.jpg')"
     class="font-heading max-h-fit w-full py-8 max-h-100 h-full object-cover bg-no-repeat bg-cover bg-center">
     <div class="container h-100 mx-auto">
       <header class="lg:mx-8 md:mx-2 mt-5">
