--- a/frontend/html_files/vote.html
+++ b/frontend/html_files/vote.html
@@ -50,11 +50,11 @@
             <div class="mx-3 mt-6">Teachers: 3</div>
             <div class="flex justify-between">
               <div class="mx-3 flex flex-col justify-center items-center">
-                <div class="p-1 h-6 w-12 shadow-md bg-green-600 border-green-400"></div>
+                <div class="p-1 h-6 w-12 shadow-md animate-pulse bg-green-600 border-green-400"></div>
                 <div>Voting Inactive</div>
               </div>
               <div class="mx-3 flex flex-col justify-center items-center">
-                <div class="p-1 h-6 w-12 shadow-md bg-red-600 border-red-400"></div>
+                <div class="p-1 h-6 w-12 shadow-md animate-pulse bg-red-600 border-red-400"></div>
                 <div>Result Inactive</div>
               </div>
             </div>
