Added Initial Moralis Setup and Tests
Moralis Setup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
   <head>
+    <!-- Moralis SDK code -->
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -48,7 +51,7 @@
             and get your transactions going
           </p>
           <div>
-            <button class="py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">Connect
+            <button class="py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full" id="btn-login">Connect
             </button>
           </div>
         </div>
