--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
   <head>
+    <!-- Moralis SDK code -->
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -33,8 +36,9 @@
               <a
               href="#"
               style="font-size: 12px;"
+              id="wallet-address"
                 class="font-sans text-sm font md:mx-3 py-2 px-5 bg-zinc-800 hover:bg-zinc-700 text-white rounded-full cursor-pointer">
-                0x8626f6940E34b78830eFb4CeF49B2d1F2C9C9988
+                wallet-address
               </a>
             </div>
           </div>
