--- a/frontend/html_files/result.html
+++ b/frontend/html_files/result.html
@@ -34,7 +34,7 @@
               href="#"
               style="font-size: 12px;"
                 class="font-sans text-sm font md:mx-3 py-2 px-5 bg-zinc-800 hover:bg-zinc-700 text-white rounded-full cursor-pointer">
-                0x8626f6940E34b78830eFb4CeF49B2d1F2C9C9988
+                Connected
               </a>
             </div>
             
