Coding Session with  Harbiola and David
- Added the local storage Solution.
- Updated the Admin UI.

--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -151,18 +151,24 @@
                 </div>
 
                 <div class=" mt-7">
-                  <h3 class="text-2xl font-sans">Vote</h3>
+                  <h3 class="text-2xl font-sans">Add Stake Holders</h3>
                   <!-- <p class="text-sm font-thin">Restricted to Chairman</p> -->
                   <form action="#candidateForm">
                     <div class="my-8">
                       <input type="text" class="rounded-full w-full block w-100 px-4 py-2 bg-zinc-800"
-                        placeholder="Input your secret Code">
-                    </div>
+                        placeholder="Input address">
+                        <label for="roles" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Select Role</label>
+                          <select id="roles" class="ronded-full bg-zinc-800 border text-white text-sm rounded-lg focus:ring-zinc-500 focus:border-zinc-500 block w-full p-2.5 dark:bg-zinc-700 dark:border-zinc-600 dark:placeholder-zinc-400 dark:text-white dark:focus:ring-zinc-500 dark:focus:border-zinc-500">
+                            <option>Student</option>
+                            <option>Teacher</option>
+                            <option>Board of Directors</option>
+                          </select>
+                        </div>
                     <div class="my-5">
                       <div class="flex justify-center items-center">
                         <button type="button"
                           class="rounded-full px-14 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">
-                          Vote</button>
+                          Add StakeHolder</button>
                       </div>
                     </div>
                   </form>
