--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
               <a href="./html_files/result.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Result</a>
             </ul>
             <button
-              class="lg:mx-5 md:mx-3 py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full">connect</button>
+              class="lg:mx-5 md:mx-3 py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full" id="walletAddressButton">connect to metamask</button>
           </div>
         </div>
       </header>
@@ -52,6 +52,8 @@
           </p>
           <div>
             <button class="py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full" id="btn-login">Connect
+            </button>
+            <button class="py-2 px-7 bg-gray-600 hover:bg-gray-500 text-white rounded-full" id="btn-logout">Logout
             </button>
           </div>
         </div>
