--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -48,7 +48,7 @@
       <main class="">
         <section class="container w-3/4 mx-auto text-white p-5">
           <div class="flex justify-between items-center align-middle">
-            <div class="mx-3 mt-6">Candidate: 3</div>
+            <div class="mx-3 mt-6" id="candidateCount">Candidate: 3</div>
             <div class="mx-3 mt-6">Board of directors: 3</div>
             <div class="mx-3 mt-6">Students</div>
             <div class="mx-3 mt-6">Teachers: 3</div>
@@ -157,8 +157,9 @@
                     <div class="my-8">
                       <input type="text" class="rounded-full w-full block w-100 px-4 py-2 bg-zinc-800"
                         placeholder="Input address">
-                        <label for="roles" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Select Role</label>
-                          <select id="roles" class="ronded-full bg-zinc-800 border text-white text-sm rounded-lg focus:ring-zinc-500 focus:border-zinc-500 block w-full p-2.5 dark:bg-zinc-700 dark:border-zinc-600 dark:placeholder-zinc-400 dark:text-white dark:focus:ring-zinc-500 dark:focus:border-zinc-500">
+                        <label for="roles" class="block my-5 text-sm font-medium text-zinc-400">Select Role</label>
+                          <select id="roles" 
+                          class="bg-zinc-800 text-white text-sm rounded-full px-3 focus:ring-zinc-500 focus:rounded-full focus:border-zinc-500 block w-full p-2.5 dark:bg-zinc-700 dark:border-zinc-600 dark:placeholder-zinc-400 dark:text-white dark:focus:ring-zinc-500 dark:focus:border-zinc-500">
                             <option>Student</option>
                             <option>Teacher</option>
                             <option>Board of Directors</option>
