--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,10 +34,16 @@
               <a href="./html_files/admin.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Admin</a>
               <a href="./html_files/vote.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Vote</a>
               <a href="./html_files/result.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Result</a>
+              <span
+              style="font-size: 12px;"
+              id="walletAddressButton"
+                class="font-sans text-sm font md:mx-3 py-2 px-5 bg-zinc-800 hover:bg-zinc-700 text-white rounded-full cursor-pointer">
+                connect metamask
+              </span>
             </ul>
-            <button
+            <!-- <button
               class="lg:mx-5 md:mx-3 py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full" id="walletAddressButton">connect to metamask</button>
-          </div>
+          </div> -->
         </div>
       </header>
 
