--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -19,7 +19,31 @@
 
   </head>
 
-  <body class="bg-zinc-900 font-heading">
+  <body class="bg-zinc-900 font-heading relative">
+    <!-- modal div -->
+    <div id="modal" class="hidden place-items-center mx-auto container absolute z-auto w-100 h-100">
+      <div class="bg-zinc-100 rounded shadow-md w-100 lg:w-[40%] md:w-[40%] items-center mt-[20%] text-zinc-900 p-5">
+        <div id="modal-content" class="">
+          <div id="modal-header" class="flex justify-between items-center py-2">
+            <h2 class="modal-title">Modal title</h2>
+            <span id="close" class="text-red-600 hover:text-red-500 cursor-pointer" style="font-size: 30px;">&times;</span>
+          </div>
+          <div class="border border-zinc-200 shadow-sm"></div>
+          <div id="modal-body" class="px-3 py-10">
+            <p>Some text in the Modal Body</p>
+            <p>Some other text...</p>
+          </div>
+          <div class="border border-zinc-200 shadow-sm"></div>
+          <div id="modal-footer" class="flex justify-center items-center pt-3">
+            <button href="#close" id="closeBtn" style="font-size: 12px;"
+              class="font-sans text-sm font md:mx-3 py-2 px-7 bg-red-600 hover:bg-red-500 text-white rounded-full cursor-pointer">
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end of modal -->
     <div class="">
       <header class="container mx-auto my-10">
         <div class="flex  mx-5 justify-between items-center">
@@ -33,10 +57,7 @@
               <a href="./admin.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Admin</a>
               <a href="./vote.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Vote</a>
               <a href="./result.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Result</a>
-              <a
-              href="#"
-              style="font-size: 12px;"
-              id="wallet-address"
+              <a href="#" style="font-size: 12px;" id="wallet-address"
                 class="font-sans text-sm font md:mx-3 py-2 px-5 bg-zinc-800 hover:bg-zinc-700 text-white rounded-full cursor-pointer">
                 wallet-address
               </a>
@@ -47,7 +68,7 @@
 
       <main class="">
         <section class="container w-3/4 mx-auto text-white p-5">
-          <div class="flex justify-between items-center align-middle">
+          <div class="flex justify-between items-center align-middle" id="status">
             <div class="mx-3 mt-6" id="candidateCount">Candidate: 3</div>
             <div class="mx-3 mt-6">Board of directors: 3</div>
             <div class="mx-3 mt-6">Students</div>
@@ -74,8 +95,7 @@
               <form action="#candidateForm" class="w-4/5" id="form-addCandidates">
                 <div class="my-5">
                   <input type="text" class="rounded-full w-full px-4 py-2 block w-100 bg-zinc-800"
-                    placeholder="FirstName"
-                    id="input-firstname">
+                    placeholder="FirstName" id="input-firstname">
                 </div>
                 <div class="my-5">
                   <input type="text" class="rounded-full w-full px-4 py-2 block w-100 bg-zinc-800"
@@ -94,8 +114,7 @@
                   </label>
                 </div>
                 <div class="my-14">
-                  <button for="addFile"
-                    id="btn-addCandidate"
+                  <button for="addFile" id="btn-addCandidate"
                     class="block rounded-full w-full text-center hover:bg-red-500 border-red-400 px-8 py-2 bg-red-600">
                     Add Candidate
                   </button>
@@ -117,12 +136,10 @@
                   </div>
                   <div class="w-3/4 my-5">
                     <div class="grid grid-cols-2 gap-4">
-                      <button type="button"
-                        id="btn-voting-open"
+                      <button type="button" id="btn-voting-open"
                         class="rounded-full w-full px-4 py-2 block w-100 bg-green-600 hover:bg-green-500 border-green-400">Open
                         Voting</button>
-                      <button type="button"
-                        id="btn-voting-close"
+                      <button type="button" id="btn-voting-close"
                         class="rounded-full w-full px-4 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">Close
                         Voting</button>
                     </div>
@@ -140,10 +157,12 @@
                     <div class="w-3/4 my-5">
                       <div class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-2 sm:grid-cols-1 gap-4">
                         <button type="button"
-                          class="rounded-full w-full px-4 py-2 block w-100 bg-green-600 hover:bg-green-500 border-green-400" id="btn-result-open">Open
+                          class="rounded-full w-full px-4 py-2 block w-100 bg-green-600 hover:bg-green-500 border-green-400"
+                          id="btn-result-open">Open
                           Result</button>
                         <button type="button"
-                          class="rounded-full w-full px-4 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400" id="btn-result-close">Close
+                          class="rounded-full w-full px-4 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400"
+                          id="btn-result-close">Close
                           Result</button>
                       </div>
                     </div>
@@ -157,14 +176,14 @@
                     <div class="my-8">
                       <input type="text" class="rounded-full w-full block w-100 px-4 py-2 bg-zinc-800"
                         placeholder="Input address">
-                        <label for="roles" class="block my-5 text-sm font-medium text-zinc-400">Select Role</label>
-                          <select id="roles" 
-                          class="bg-zinc-800 text-white text-sm rounded-full px-3 focus:ring-zinc-500 focus:rounded-full focus:border-zinc-500 block w-full p-2.5 dark:bg-zinc-700 dark:border-zinc-600 dark:placeholder-zinc-400 dark:text-white dark:focus:ring-zinc-500 dark:focus:border-zinc-500">
-                            <option>Student</option>
-                            <option>Teacher</option>
-                            <option>Board of Directors</option>
-                          </select>
-                        </div>
+                      <label for="roles" class="block my-5 text-sm font-medium text-zinc-400">Select Role</label>
+                      <select id="roles"
+                        class="bg-zinc-800 text-white text-sm rounded-full px-3 focus:ring-zinc-500 focus:rounded-full focus:border-zinc-500 block w-full p-2.5 dark:bg-zinc-700 dark:border-zinc-600 dark:placeholder-zinc-400 dark:text-white dark:focus:ring-zinc-500 dark:focus:border-zinc-500">
+                        <option>Student</option>
+                        <option>Teacher</option>
+                        <option>Board of Directors</option>
+                      </select>
+                    </div>
                     <div class="my-5">
                       <div class="flex justify-center items-center">
                         <button type="button"
