--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -21,7 +21,7 @@
 
   <body class="bg-zinc-900 font-heading relative">
     <!-- modal div -->
-    <div id="modal" class="grid transition-all place-items-center mx-auto container absolute z-auto w-100 h-100">
+    <div id="modal" class="grid bg-white opacity-80 transition-all place-items-center mx-auto container absolute z-auto w-100 h-100">
       <div class="bg-zinc-100 rounded transition-opacity ease-in-out duration-1000 shadow-md w-100 lg:w-[40%] md:w-[40%] items-center mt-[20%] text-zinc-900 p-5">
         <div id="modal-content" class="">
           <div id="modal-header" class="flex justify-between items-center py-2">
