--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -21,17 +21,15 @@
 
   <body class="bg-zinc-900 font-heading relative">
     <!-- modal div -->
-    <div id="modal" class="grid bg-white opacity-80 transition-all place-items-center mx-auto container absolute z-auto w-100 h-100">
+    <div id="modal" class="hidden bg-white opacity-80 transition-all place-items-center mx-auto container absolute z-auto w-100 h-100">
       <div class="bg-zinc-100 rounded transition-opacity ease-in-out duration-1000 shadow-md w-100 lg:w-[40%] md:w-[40%] items-center mt-[20%] text-zinc-900 p-5">
         <div id="modal-content" class="">
           <div id="modal-header" class="flex justify-between items-center py-2">
-            <h2 id="modal-title">Modal title</h2>
+            <h2 id="modal-title"></h2>
             <span id="close" class="text-zinc-500 font-sans font-medium text-xl hover:text-zinc-900 cursor-pointer">close</span>
           </div>
           <div class="border border-zinc-200 shadow-sm"></div>
           <div id="modal-body" class="px-3 py-10">
-            <p>Some text in the Modal Body</p>
-            <p>Some other text...</p>
           </div>
           <div class="border border-zinc-200 shadow-sm"></div>
           <div id="modal-footer" class="flex justify-center items-center pt-3">
@@ -69,10 +67,10 @@
       <main class="">
         <section class="container w-3/4 mx-auto text-white p-5">
           <div class="flex justify-between items-center align-middle" id="status">
-            <div class="mx-3 mt-6" id="candidateCount">Candidate: 3</div>
-            <div class="mx-3 mt-6">Board of directors: 3</div>
-            <div class="mx-3 mt-6">Students</div>
-            <div class="mx-3 mt-6">Teachers: 3</div>
+            <div class="mx-3 mt-6" id="candidateCount">Candidate: 0</div>
+            <div class="mx-3 mt-6" id="BODCount">Board of directors: a</div>
+            <div class="mx-3 mt-6" id="studentCount">Students: a</div>
+            <div class="mx-3 mt-6" id="teacherCount">Teachers: a</div>
             <div class="flex justify-between">
               <div class="mx-3 flex flex-col justify-center items-center">
                 <div class="p-1 h-6 w-12 shadow-md bg-red-600 border-red-400" id="voting-status"></div>
@@ -90,7 +88,7 @@
           <div class="grid grid-cols-2 items-center my-32 gap-8 text-white">
             <!-- form 1 -->
             <div id="form1">
-              <h3 class="text-2xl font-sans">Create Candidate Profile</h3>
+              <h3 class="text-3xl text-bold font-heading font-medium">Create Candidate Profile</h3>
               <p class="text-sm font-thin">Restricted to Chairman, Board of Directors and Teachers.</p>
               <form action="#candidateForm" class="w-4/5" id="form-addCandidates">
                 <div class="my-5">
@@ -127,7 +125,7 @@
             <!-- form 2 -->
             <div id="form2">
               <div class="w-4/5 ml-14">
-                <h3 class="text-2xl font-sans">Open/Close Voting Portal</h3>
+                <h3 class="text-3xl text-bold font-heading font-medium">Open/Close Voting Portal</h3>
                 <p class="text-sm font-thin">Restricted to Chairman</p>
                 <form action="#candidateForm">
                   <div class="my-8">
@@ -147,7 +145,7 @@
                 </form>
 
                 <div class=" mt-7">
-                  <h3 class="text-2xl font-sans">Open/Close Results Portal</h3>
+                  <h3 class="text-3xl text-bold font-heading font-medium">Open/Close Results Portal</h3>
                   <p class="text-sm font-thin">Restricted to Chairman</p>
                   <form action="#candidateForm">
                     <div class="my-8">
@@ -170,23 +168,24 @@
                 </div>
 
                 <div class=" mt-7">
-                  <h3 class="text-2xl font-sans">Add Stake Holders</h3>
-                  <!-- <p class="text-sm font-thin">Restricted to Chairman</p> -->
+                  <h3 class="text-3xl text-bold font-heading font-medium">Add Stake Holders</h3>
+                  <p class="text-sm font-thin">Restricted to Chairman</p>
                   <form action="#candidateForm">
                     <div class="my-8">
                       <input type="text" class="rounded-full w-full block w-100 px-4 py-2 bg-zinc-800"
-                        placeholder="Input address">
+                        placeholder="Input address" id="input-address">
                       <label for="roles" class="block my-5 text-sm font-medium text-zinc-400">Select Role</label>
                       <select id="roles"
                         class="bg-zinc-800 text-white text-sm rounded-full px-3 focus:ring-zinc-500 focus:rounded-full focus:border-zinc-500 block w-full p-2.5 dark:bg-zinc-700 dark:border-zinc-600 dark:placeholder-zinc-400 dark:text-white dark:focus:ring-zinc-500 dark:focus:border-zinc-500">
-                        <option>Student</option>
-                        <option>Teacher</option>
-                        <option>Board of Directors</option>
+                        <option value="2">Student</option>
+                        <option value="1">Teacher</option>
+                        <option value="0">Board of Directors</option>
                       </select>
                     </div>
                     <div class="my-5">
                       <div class="flex justify-center items-center">
                         <button type="button"
+                          id="btn-addStakeholder"
                           class="rounded-full px-14 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">
                           Add StakeHolder</button>
                       </div>
