--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -68,9 +68,9 @@
         <section class="container w-3/4 mx-auto text-white p-5">
           <div class="flex justify-between items-center align-middle" id="status">
             <div class="mx-3 mt-6" id="candidateCount">Candidate: 0</div>
-            <div class="mx-3 mt-6" id="BODCount">Board of directors: a</div>
-            <div class="mx-3 mt-6" id="studentCount">Students: a</div>
-            <div class="mx-3 mt-6" id="teacherCount">Teachers: a</div>
+            <div class="mx-3 mt-6" id="BODCount">Board of directors: 0</div>
+            <div class="mx-3 mt-6" id="studentCount">Students: 0</div>
+            <div class="mx-3 mt-6" id="teacherCount">Teachers: 0</div>
             <div class="flex justify-between">
               <div class="mx-3 flex flex-col justify-center items-center">
                 <div class="p-1 h-6 w-12 shadow-md bg-red-600 border-red-400" id="voting-status"></div>
