--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,7 +62,7 @@
               style="font-size: 12px;"
               id="walletAddressButton"
                 class="font-sans text-sm font md:mx-3 py-2 px-5 bg-zinc-800 hover:bg-zinc-700 text-white rounded-full cursor-pointer">
-                connect metamask
+                connect to metamask
               </span>
             </ul>
             <!-- <button
