--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
   <!-- url('https://images.unsplash.com/photo-1472803828399-39d4ac53c6e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1553&q=80') -->
 
   <body style="background-image: url('https://images.unsplash.com/photo-1472803828399-39d4ac53c6e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1553&q=80')"
-    class="relative font-heading max-h-fit w-full py-8 max-h-100 h-full object-cover bg-no-repeat bg-cover bg-center">
+    class="bg-zinc-900 relative font-heading max-h-fit w-full py-8 max-h-100 h-full object-cover bg-no-repeat bg-cover bg-center">
      <!-- modal div -->
      <div id="modal" class="hidden transition-all place-items-center mx-auto container absolute z-auto w-100 h-100">
       <div class="bg-zinc-100 rounded transition-opacity ease-in-out duration-1000 shadow-md w-100 lg:w-[40%] md:w-[40%] items-center mt-[20%] text-zinc-900 p-5">
