--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -65,6 +65,7 @@
       </header>
 
       <main class="">
+        <!-- status bar -->
         <section class="container w-3/4 mx-auto text-white p-5">
           <div class="flex justify-between items-center align-middle" id="status">
             <div class="mx-3 mt-6" id="candidateCount">Candidate: 0</div>
@@ -83,6 +84,7 @@
             </div>
           </div>
         </section>
+        <!-- end of status bar -->
 
         <section class="w-4/5 mx-auto">
           <div class="grid grid-cols-2 items-center my-32 gap-8 text-white">
@@ -185,7 +187,7 @@
                     <div class="my-5">
                       <div class="flex justify-center items-center">
                         <button type="button"
-                          id="btn-addStakeholder"
+                          id="btn-addStakeholder ;;"
                           class="rounded-full px-14 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">
                           Add StakeHolder</button>
                       </div>
