--- a/frontend/html_files/result.html
+++ b/frontend/html_files/result.html
@@ -99,8 +99,9 @@
 
             <div>
               <div class="cursor-pointer rounded-sm">
-                <img src="https://img.freepik.com/free-photo/3d-rendering-male-character-profile-with-cream-hat-orange-polo-shirt-good-character-profile_477250-61.jpg?size=338&ext=jpg&ga=GA1.1.1906834557.1622206067" alt="voters image" srcset="" 
-                class="h-52 w-52">
+                <img
+                  src="https://img.freepik.com/free-photo/3d-rendering-male-character-profile-with-cream-hat-orange-polo-shirt-good-character-profile_477250-61.jpg?size=338&ext=jpg&ga=GA1.1.1906834557.1622206067"
+                  alt="voters image" srcset="" class="h-52 w-52">
                 <div class="bg-zinc-700 text-center w-52">
                   <h1 class="text-lg font-bold">FirstName Lastname</h1>
                   <p class="font-sans font-light">Change and Positivity</p>
@@ -112,8 +113,9 @@
 
             <div>
               <div class="cursor-pointer rounded-sm">
-                <img src="https://img.freepik.com/free-photo/3d-rendering-male-character-profile-with-cream-hat-orange-polo-shirt-good-character-profile_477250-61.jpg?size=338&ext=jpg&ga=GA1.1.1906834557.1622206067" alt="voters image" srcset="" 
-                class="h-52 w-52">
+                <img
+                  src="https://img.freepik.com/free-photo/3d-rendering-male-character-profile-with-cream-hat-orange-polo-shirt-good-character-profile_477250-61.jpg?size=338&ext=jpg&ga=GA1.1.1906834557.1622206067"
+                  alt="voters image" srcset="" class="h-52 w-52">
                 <div class="bg-zinc-700 text-center w-52">
                   <h1 class="text-lg font-bold">FirstName Lastname</h1>
                   <p class="font-sans font-light">Change and Positivity</p>
@@ -124,8 +126,9 @@
             </div>
             <div>
               <div class="cursor-pointer rounded-sm">
-                <img src="https://img.freepik.com/free-photo/3d-rendering-male-character-profile-with-cream-hat-orange-polo-shirt-good-character-profile_477250-61.jpg?size=338&ext=jpg&ga=GA1.1.1906834557.1622206067" alt="voters image" srcset="" 
-                class="h-52 w-52">
+                <img
+                  src="https://img.freepik.com/free-photo/3d-rendering-male-character-profile-with-cream-hat-orange-polo-shirt-good-character-profile_477250-61.jpg?size=338&ext=jpg&ga=GA1.1.1906834557.1622206067"
+                  alt="voters image" srcset="" class="h-52 w-52">
                 <div class="bg-zinc-700 text-center w-52">
                   <h1 class="text-lg font-bold">FirstName Lastname</h1>
                   <p class="font-sans font-light">Change and Positivity</p>
@@ -136,8 +139,9 @@
             </div>
             <div>
               <div class="cursor-pointer rounded-sm">
-                <img src="https://img.freepik.com/free-photo/3d-rendering-male-character-profile-with-cream-hat-orange-polo-shirt-good-character-profile_477250-61.jpg?size=338&ext=jpg&ga=GA1.1.1906834557.1622206067" alt="voters image" srcset="" 
-                class="h-52 w-52">
+                <img
+                  src="https://img.freepik.com/free-photo/3d-rendering-male-character-profile-with-cream-hat-orange-polo-shirt-good-character-profile_477250-61.jpg?size=338&ext=jpg&ga=GA1.1.1906834557.1622206067"
+                  alt="voters image" srcset="" class="h-52 w-52">
                 <div class="bg-zinc-700 text-center w-52">
                   <h1 class="text-lg font-bold">FirstName Lastname</h1>
                   <p class="font-sans font-light">Change and Positivity</p>
